[package]
name = "jarnac"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
either = "1.13.0"
into_variant = "0.3.0"
itertools = "0.14.0"
rand = "0.9.0"
serde = "1.0.217"
zerocopy = "0.8.17" 
zerocopy-derive = "0.8.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "jarnac_benchmark"
harness = false